<resources>
    <string name="culture_name">en</string>
    <string name="app_name">CarePlant</string>
    <string name="articles">Articles</string>
    <string name="alarms">Reminders</string>
    <string name="article_name_placeholder">Name</string>
    <string name="add_alarm_button_description">Add Reminder</string>
    <string name="back_button_description">Back to Articles</string>
    <string name="switch_button_placeholder">Switch</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="new_alarm">New Reminder</string>
    <string name="alarm_name_hint">Plant Name</string>
    <string name="watering">Watering</string>
    <string name="fertilize">Fertilizing</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>

    <string name="notification_name_placeholder">Plant Care</string>
    <string name="notification_type_placeholder">Your plant needs you</string>

    <string name="type_watering">Watering</string>
    <string name="type_fertilizing">Fertilizing</string>
    <string name="type_unknown">Unknown</string>

    <string name="error_loading">Internet connection required</string>
    <string name="error_loading_extended">Loading error and no data in cache</string>
    <string name="select_start_date">Select the start date:</string>
    <string name="right_arrow_description">Open Article</string>
    <string name="alarms_label">Reminders</string>

    <string name="time_days">%d d</string>
    <string name="time_hours">%d h</string>
    <string name="time_minutes">%d min</string>
    <string name="search_articles">Search articles…</string>
    <string name="create_alarm_description">Create Reminder</string>
    <string name="article_grid_item_image_description">Article Image</string>
    <string name="complete">Complete</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="select_interval">Select the interval (in days):</string>
    <string name="create_reminder">Create a reminder</string>
    <string name="select_time">Choose a time:</string>
    <string name="transplanting">Transplanting</string>

    <string name="complete_title_1">Great job, well-groomed plants are healthy plants</string>
    <string name="complete_title_2">If plants could speak, they would say "thank you"</string>
    <string name="complete_title_3">Everything is fine with the plants now</string>
    
    <string name="first_alarm_creation">The first plant has been added to the schedule!</string>
    <string name="water_spraying">Water spraying</string>

    <string name="calendar_error">The calendar application is missing</string>
    <string name="add_to_calendar">Add to calendar: </string>
    <string name="require_calendar">To enable it, you need to allow access</string>
</resources>
